# StellarForge

./: .clang-format  .gitignore  CMakeLists.txt  QUICKSTART Windows-10-11.md  README.md  build_engine.sh  build_with_cuda.sh  install.ps1  install.sh  launch.sh  main.py  setup.ps1  setup.sh  verify_engine.py
Engine/: CMakeLists.txt  Engine.hpp
Engine/Assets/: AssetManager.cpp  AssetManager.hpp  Image.cpp  Image.hpp
Engine/Core/: Application.cpp  Application.hpp  CoreTypes.hpp  EntryPoint.cpp  EntryPoint.hpp  Input.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Macro.hpp  Window.hpp
Engine/Event/: EventHandler.cpp  EventHandler.hpp  EventListener.hpp
Engine/Maths/: Maths.hpp  Random.cpp  Random.hpp
Engine/Platform/CrossPlatform/: GlfwWIndow.hpp  GlfwWindow.cpp
Engine/Renderer/: Camera.cpp  Camera.hpp  FrameBuffer.hpp  IndexBuffer.hpp  RenderCommand.hpp  Renderer2D.cpp  Renderer2D.hpp  Shader.hpp  Texture.hpp  Types.cpp  Types.hpp  VertexBuffer.hpp
Engine/Renderer/Opengl/: OpenglFrameBuffer.cpp  OpenglFrameBuffer.hpp  OpenglIndexBuffer.cpp  OpenglIndexBuffer.hpp  OpenglRenderCommand.cpp  OpenglRenderCommand.hpp  OpenglShader.cpp  OpenglShader.hpp  OpenglTexture.cpp  OpenglTexture.hpp  OpenglVertexBuffer.cpp  OpenglVertexBuffer.hpp
Engine/Utility/: Memory.hpp  StorageLibrary.hpp  Timer.cpp  Timer.hpp
Project/: CMakeLists.txt
Project/ParticleSim/: CMakeLists.txt  Particle.cpp  Particle.hpp  ParticleSim  ParticleSim.cpp  ParticleSim.hpp
cpp_engine/: CMakeLists.txt  README.md
cpp_engine/cuda/: collision_kernel.cu  gravity_kernel.cu
cpp_engine/include/: cuda_kernels.h  physics_engine.h
cpp_engine/shaders/: gravity.comp  gravity_compute.glsl  integrate.comp  verlet_compute.glsl
cpp_engine/src/: barnes_hut_tree.cpp  collision_system.cpp  gl_compute_backend.cpp  particle_system.cpp  physics_engine.cpp  python_bindings.cpp  verlet_integrator.cpp
docs/: CPP_ENGINE_IMPLEMENTATION.md  QUICKSTART_CPP_ENGINE.md  Untitled.mtl
logs/: final_error_report.json
src/core/: error_diagnostics.py
src/engine_bridge/: __init__.py  cpp_engine.py  mock_engine.py
src/gui/: control_panel.py  info_panel.py  main_window.py  splash_screen.py  styles.py  theme.py  timeline_widget.py
src/vis/: model_loader.py  textured_mesh.py  universe_renderer.py
